<resources>
    <string name="app_name">WGU</string>
    <string name="create_sample_data">Create Sample Data</string>
    <string name="delete_all_data">Delete All Sample Data</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="all_terms_deleted">All terms deleted.</string>
    <string name="all_courses_deleted">All courses deleted.</string>
    <string name="all_assessments_deleted">All assessments deleted.</string>
    <string name="all_mentors_deleted">All mentors deleted.</string>
    <string name="ellipses">…</string>
    <string name="new_term">New term</string>
    <string name="term_updated">Term updated.</string>
    <string name="action_delete">Delete</string>
    <string name="edit_term">Edit term</string>
    <string name="term_deleted">Term deleted.</string>
    <string name="term">Term</string>
    <string name="enter_a_new_term_title">Enter a new title</string>
    <string name="termTitleTextView_text">Title:</string>
    <string name="termStartDateTextView_text">Start Date:</string>
    <string name="termEndDateTextView_text">End Date:</string>
    <string name="term_inserted">Term inserted.</string>
    <string name="course_list_button_text">Courses</string>
    <string name="courseTitleTextView_text">Title:</string>
    <string name="enter_a_new_course_title">Enter a new title</string>
    <string name="courseStartDateTextView_text">Start Date:</string>
    <string name="courseEndDateTextView_text">End Date:</string>
    <string name="assessment_list_button_text">Assessments</string>
    <string name="courseStatusTextView_Text">Status:</string>
    <string name="new_course">New Course</string>
    <string name="new_assessment">New Assessment</string>
    <string name="parent_id">parent_id</string>
    <string name="edit_course">Edit Course</string>
    <string name="course_deleted">Course deleted.</string>
    <string name="course_updated">Course updated.</string>
    <string name="course_inserted">Course inserted.</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="assessment_deleted">Assessment deleted.</string>
    <string name="assessment_updated">Assessment updated.</string>
    <string name="assessment_inserted">Assessment inserted.</string>
    <string name="start_date_hint">Enter a start date</string>
    <string name="end_date_hint">Enter an end date</string>
    <string name="assessmentTitleTextView_text">Title:</string>
    <string name="enter_a_new_assessment_title">Enter a new title</string>
    <string name="assessmentDueDateTextView_text">Due Date:</string>
    <string name="assessmentGoalDateTextView_text">Goal Date:</string>
    <string name="assessmentTypeTextView_Text">Type:</string>
    <string name="assessment_goal_date_hint">Enter a goal date</string>
    <string name="assessment_due_date_hint">Enter a due date</string>
    <string name="assessmentObjectiveRadioButton_text">Objective</string>
    <string name="assessmentPerformanceRadioButton_text">Performance</string>
    <string name="mentor_list_button_text">Mentors</string>
    <string name="mentorNameTextView_text">Name:</string>
    <string name="enter_a_new_mentor_title">Enter a new mentor name</string>
    <string name="mentorEmailTextView_text">Email:</string>
    <string name="mentor_email_hint">Enter an email</string>
    <string name="mentorPhoneTextView_text">Phone:</string>
    <string name="mentor_phone_hint">Enter a phone</string>
    <string name="new_mentor">New Mentor</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="mentor_deleted">Mentor deleted.</string>
    <string name="mentor_updated">Mentor updated.</string>
    <string name="mentor_inserted">Mentor inserted.</string>
    <string name="term_list_button_text">Terms</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="welcome_to_the_wgu_student_portal">Welcome to the WGU student portal.</string>
    <string name="no_assessments_due">No assessments due.</string>
    <string name="configure_to_do">Configure To Do List</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="to_do_window_id">to_do_window_id</string>
    <string name="one_assessment_due">1 assessment due.</string>
    <string name="multiple_assessments_due">" assessments due."</string>
    <string name="courseNoteTextView_Text">Notes:</string>
    <string name="assessmentNoteTextView_Text">Notes:</string>
    <string name="open_the_camera">Open the Camera</string>
    <string-array name="course_status">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Failed</item>
    </string-array>
    <string-array name="to_do_window">
        <item>Today</item>
        <item>3 Days</item>
        <item>1 Week</item>
        <item>1 Month</item>
    </string-array>
    <plurals name="numberOfAssessmentsDue">
        <item quantity="one">%d assessment due.</item>
        <item quantity="other">%d assessments due.</item>
    </plurals>
    <plurals name="numberOfCoursesStarting">
        <item quantity="one">%d course starting.</item>
        <item quantity="other">%d courses starting.</item>
    </plurals>
    <plurals name="numberOfCoursesEnding">
        <item quantity="one">%d course ending.</item>
        <item quantity="other">%d courses ending.</item>
    </plurals>
</resources>
