<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wgu.MentorActivity">

    <TextView
        android:id="@+id/mentorNameTextView"
        android:layout_width="@dimen/control_width_96"
        android:layout_height="@dimen/control_height_48"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="end|center_vertical"
        android:text="@string/mentorNameTextView_text"
        android:textSize="@dimen/text_size_18" />

    <EditText
        android:id="@+id/mentorNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/control_height_48"
        android:layout_alignBottom="@+id/mentorNameTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/mentorNameTextView"
        android:layout_toRightOf="@+id/mentorNameTextView"
        android:ems="12"
        android:hint="@string/enter_a_new_mentor_title"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <TextView
        android:id="@+id/mentorEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/control_height_48"
        android:layout_alignEnd="@+id/mentorNameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/mentorNameTextView"
        android:layout_below="@+id/mentorNameTextView"
        android:gravity="end|center_vertical"
        android:text="@string/mentorEmailTextView_text"
        android:textSize="@dimen/text_size_18" />

    <EditText
        android:id="@+id/mentorEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mentorEmailTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mentorNameEditText"
        android:layout_toEndOf="@+id/mentorEmailTextView"
        android:layout_toRightOf="@+id/mentorEmailTextView"
        android:ems="10"
        android:hint="@string/mentor_email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <TextView
        android:id="@+id/mentorPhoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/control_height_48"
        android:layout_alignEnd="@+id/mentorEmailTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/mentorEmailTextView"
        android:layout_below="@+id/mentorEmailTextView"
        android:gravity="end|center_vertical"
        android:text="@string/mentorPhoneTextView_text"
        android:textSize="@dimen/text_size_18" />

    <EditText
        android:id="@+id/mentorPhoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mentorPhoneTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mentorEmailEditText"
        android:layout_toEndOf="@+id/mentorPhoneTextView"
        android:layout_toRightOf="@+id/mentorPhoneTextView"
        android:hint="@string/mentor_phone_hint"
        android:inputType="phone"
        android:maxLines="1" />

</RelativeLayout>
